# distributed-systems-haskell

./: .gitignore  Makefile  README.md  ch-dsl.cabal  chscheck.cabal  cloudhs-check.cabal  ttf-cloudhs.cabal  ttf-cloushs.cabal
app/: Hello.hs  Main.hs
doc/: Makefile  references.bib
examples/: PingPong1.hs  PingPong2.hs
src/: Cloud.hs  Lib.hs
src/Cloud/: Check.hs  Embed.hs  Misc.hs  Misc.lhs  Native.hs
src/Language/DSL/Distributed/Process/: Misc.hs  Misc.lhs
