name:                chscheck
version:             0.1.0.0
synopsis:            QuickChecking Cloud Haskell
description:         Please see README.md
homepage:            http://github.com/themattchan/distributed-systems-haskell
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan,  Atyansh Jaiswal
maintainer:          Matthew Chan <mattchan@ucsd.edu>
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Source-Repository head
  type:     git
  location: http://github.com/themattchan/distributed-systems-haskell

Library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

Executable chscheck
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , distributed-process >= 0.5.5.1
                     , network-transport-tcp >= 0.4.2
  default-language:    Haskell2010
  ghc-options: -Werror -W  -fno-warn-unused-imports -fno-warn-dodgy-imports -fno-warn-deprecated-flags -fno-warn-deprecations -fno-warn-missing-methods -threaded

test-suite chscheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chscheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
