name:                ttf-cloudhs
version:             0.1.0.0
synopsis:            QuickChecking Cloud Haskell with an embedded DSL
description:         Please see README.md
homepage:            http://github.com/themattchan/distributed-systems-haskell
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan,  Atyansh Jaiswal
maintainer:          Matthew Chan <mattchan@ucsd.edu>
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

Source-Repository head
  type:     git
  location: http://github.com/themattchan/distributed-systems-haskell/

Library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Cloud
  build-depends:       base >= 4.7 && < 5
                     , distributed-process   >= 0.5.5.1
                     , distributed-static    >= 0.3.3.0
                     , network-transport-tcp >= 0.4.2
                     , mtl >= 2.1 && < 2.3
                     , stm >= 2.4 && < 2.5
                     , QuickCheck >= 2.8  && < 2.9


Executable run-dsl
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , ttf-cloudhs
                     , distributed-process   >= 0.5.5.1
                     , distributed-static    >= 0.3.3.0
                     , network-transport-tcp >= 0.4.2
  ghc-options: -Werror -W  -fno-warn-unused-imports -fno-warn-dodgy-imports -fno-warn-deprecated-flags -fno-warn-deprecations -fno-warn-missing-methods -threaded

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ch-dsl
                     , QuickCheck >= 2.8  && < 2.9
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
